Fix word break in rich topics

--- a/src/app/room/rich-topic/rich-topic.component.scss
+++ b/src/app/room/rich-topic/rich-topic.component.scss
@@ -62,7 +62,7 @@
   }
 
   .markdown-content {
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     h1 {
       font-size: 16px;
     }
